--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-gym==0.9.4
-matplotlib==1.4.3
-numpy==1.13.3
-tensorflow==1.4.0
+numpy==1.16.1
+scipy==1.2.1
+pandas==0.24.1
+tensorflow==1.12.0
+gym==0.11.0
+matplotlib==3.0.2
+scikit-image==0.14.2
